# CROSS-Go

./: .gitignore  PQC-Master-Thesis  README.md  bench_profile.go  convert.py  cpu.prof  debug_bs.txt  go.mod  main.go  test.txt  todos.md  todos.txt
KAT/: cross_kat_wrapper.go  interpreter.go  sha_KAT.sh
KAT/KAT_DATA/: PQCsignKAT_54_9120.rsp  hashes.txt
common/: cross.go  fp_arith.go  merkle.go  pack_unpack.go  restr_arith.go  seed.go  shake.go  tree_aux.go  utils.go
debug_CROSS_submission/Additional_Implementations/Benchmarking/: CMakeLists.txt  compile.sh  main.c  main_key.c  main_merkle.c  main_rsdp.c  main_rsdpg.c  main_sign.c  main_verify.c  output.txt  output3.txt  output5.txt  output_balanced_1_rsdp.txt  output_balanced_1_rsdpg.txt  output_balanced_3_rsdp.txt  output_balanced_3_rsdpg.txt  output_balanced_5_rsdp.txt  output_balanced_5_rsdpg.txt  output_sigsize_1_rsdp.txt  output_sigsize_1_rsdpg.txt  output_sigsize_3_rsdp.txt  output_sigsize_3_rsdpg.txt  output_sigsize_5_rsdp.txt  output_sigsize_5_rsdpg.txt  output_speed_1_rsdp.txt  output_speed_1_rsdpg.txt  output_speed_3_rsdp.txt  output_speed_3_rsdpg.txt  output_speed_5_rsdp.txt  output_speed_5_rsdpg.txt  shake_test.c
debug_CROSS_submission/Additional_Implementations/KAT_Generation/lib/: PQCgenKAT_sign.c
debug_CROSS_submission/KAT/: PQCsignKAT_153_53527.req  PQCsignKAT_54_11980.rsp  PQCsignKAT_54_8960.rsp  PQCsignKAT_77_12432.rsp  PQCsignKAT_77_13152.rsp
debug_CROSS_submission/Reference_Implementation/include/: CROSS.h  api.h  csprng_hash.h  fp_arith.h  restr_arith.h
debug_CROSS_submission/Reference_Implementation/lib/: CROSS.c  merkle.c  seedtree.c  sign.c
dudect/: dudect.go  dudect_funcs.go  dudect_funcs_different_key.go
graphs/: fast_tree.py  memory_graph.py  memory_graph_2.py  runtime_graph.py  tree_graphs.py
internal/: cross.go  fp_arith.go  merkle.go  pack_unpack.go  params.go  restr_arith.go  seed.go  shake.go  tree_aux.go  utils.go
internal/common/: params.go  utils.go
internal/matrix/: matrix.go
internal/merkle/: merkle.go  merkle_test.go
internal/seed/: seed.go  seed_test.go
internal/shake/: shake.go
internal/trees/: cross.go  merkle.go  seed.go  tree_aux.go
internal/trees/merkle/: merkle.go  merkle_test.go
internal/trees/seed/: seed.go  seed_test.go
pkg/protocols/CROSS-ID/: prover.go  verifier.go
pkg/vanilla/: cross.go  key_gen.go  sign.go  vanilla.go  verify.go
test/: bench_test.go  compatibility_test.go  keygen_test.go  merkle_test.go  negative_test.go  seed_test.go  shake_test.go  sign_rsdp_test.go  sign_rsdpg_test.go  sign_test.go  unit_test.go
test/data/merkle_rsdp_1_balanced/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_balanced/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_balanced/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_fast/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_fast/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_fast/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_small/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_small/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_1_small/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_balanced/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_balanced/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_balanced/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_fast/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_fast/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_fast/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_small/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_small/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_3_small/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_balanced/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_balanced/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_balanced/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_fast/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_fast/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_fast/2/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_small/0/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_small/1/: chall_2  leaves  proof  root
test/data/merkle_rsdp_5_small/2/: chall_2  leaves  proof  root
